--- a/dbc1.css
+++ b/dbc1.css
@@ -4,7 +4,7 @@ body {
 
 p {
 	font-family: Arial;
-	font-size: 10px;
+	font-size: 14px;
 }
 
 h1 {
@@ -29,4 +29,8 @@ h5 {
 
 h6 {
 	font-family: sans-serif;
+}
+
+li {
+	font-size: 10px;
 }
