--- a/dbc2.css
+++ b/dbc2.css
@@ -5,7 +5,7 @@ body {
 #header {
 	padding:15px;
 	border:1.5px solid black;
-	color: red;
+	background-color: red;
 	margin-bottom:10px;
 	position: relative;
 }
@@ -17,19 +17,23 @@ body {
 	float: right;
 }
 
+h1 {
+	position: absolute;
+}
+
 #sidebar {
+	background-color: green;
 	padding:20px;
 	border:2px solid blue;
-	color: green;
 	margin:auto;
 	float: left;
 }
 
 #footer {
+	background-color: blue;
 	padding:10px;
 	border-top:2px solid black;
 	border-bottom:4px dotted navy;
-	color:blue;
 	margin:auto;
 	clear:both;
 }
@@ -38,9 +42,7 @@ p {
 	text-align: center;
 }
 
-h1 {
-	position: absolute;
-}
+
 
 h2 {
 	text-align: center;
