--- a/dbc2.css
+++ b/dbc2.css
@@ -19,13 +19,13 @@ body {
 
 h1 {
 	position: absolute;
+	text-align: left;
 }
 
 #sidebar {
 	background-color: green;
 	padding:20px;
 	border:2px solid blue;
-	margin:auto;
 	float: left;
 }
 
