--- a/dbc2.css
+++ b/dbc2.css
@@ -2,12 +2,23 @@ body {
 	vertical-align:center
 }
 
+.site {
+	width:1020px;
+}
+
 #header {
 	padding:15px;
 	border:1.5px solid black;
 	background-color: red;
 	margin-bottom:10px;
 	position: relative;
+}
+
+#sidebar {
+	background-color: green;
+	padding:20px;
+	border:2px solid blue;
+	float: left;
 }
 
 .content_area {
@@ -22,12 +33,6 @@ h1 {
 	text-align: left;
 }
 
-#sidebar {
-	background-color: green;
-	padding:20px;
-	border:2px solid blue;
-	float: left;
-}
 
 #footer {
 	background-color: blue;
