--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 	width:1020px;
 }
 
-#header {
+header {
 	padding:15px;
 	border:1.5px solid black;
 	background-color: rgb(203, 177, 226);
@@ -36,7 +36,7 @@ h1 {
 
 
 
-#footer {
+footer {
 	background-color: rgb(133, 133, 201);
 	padding:10px;
 	border-top:2px solid black;
