--- a/index.css
+++ b/index.css
@@ -72,6 +72,12 @@ h2 {
 
   img {
   	vertical-align: center
-	width:1000px;
-	height:830px;
+	width:66.6%;
+	height:30%;
+  }
+
+  @media screen and (max-device-width: 480px) {
+  	#sidebar {
+  		float:none;
+  	}
   }
