--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
 h1 {
 	text-align: center;
 	float: center;
+	font-family: sans-serif;
 }
 
 #sidebar {
@@ -25,6 +26,7 @@ h1 {
 	height:850px;
 	border: 2px solid rgb(115, 115, 204);
 	float: left;
+	font-family: sans-serif;
 }
 
 .content_area {
@@ -47,12 +49,14 @@ h1 {
 
 p {
 	text-align: center;
+	font-family: sans-serif;
 }
 
 
 
 h2 {
 	text-align: center;
+	font-family: sans-serif;
 }
 
   a:link	{
