--- a/unit1_projects/index.css
+++ b/unit1_projects/index.css
@@ -88,7 +88,7 @@ h1 {
 #sidebar {
 	background-color: rgb(137, 197, 206);
 	width:25%;
-	height:145%;
+	height:78%;
 	border: 2px solid rgb(115, 115, 204);
 	float: left;
 	font-family: fontAwesome;
@@ -150,9 +150,10 @@ h2 {
 
   img {
   	vertical-align: center
-	width:35%;
-	height:120%;
+	width:13%;
+	height:65%;
 	padding:5px;
+	display:inline;
   }
 
 @font-face {
