--- a/unit1_projects/week2_technical.css
+++ b/unit1_projects/week2_technical.css
@@ -163,3 +163,9 @@ img.logotext {
 	margin:10px;
   } 
 }
+
+  @media screen and (max-device-width: 480px) {
+  	#sidebar {
+  		float:none;
+  	}
+  } 
