more changes for web responsive

--- a/unit1_projects/week2_technical.css
+++ b/unit1_projects/week2_technical.css
@@ -166,6 +166,6 @@ img.logotext {
 
   @media screen and (max-device-width: 480px) {
   	#sidebar {
-  		float:none;
+  		float:center;
   	}
   } 
