--- a/unit1_projects/index.css
+++ b/unit1_projects/index.css
@@ -89,7 +89,7 @@ h1 {
 #sidebar {
 	background-color: white;
 	width:25%;
-	height:78%;
+	height:80%;
 	border: 2px solid rgb(115, 115, 204);
 	float: left;
 	font-family: fontAwesome;
@@ -97,6 +97,7 @@ h1 {
 	text-align: center;
 	padding:10px;
 	margin: 15px;
+	display: inline-block;
 }
 
 .content_area {
@@ -158,7 +159,7 @@ h2 {
 
   img {
   	vertical-align: center
-	width:13%;
+	width:10%;
 	height:65%;
 	padding:5px;
 	display:inline;
