--- a/unit1_projects/week2_technical.css
+++ b/unit1_projects/week2_technical.css
@@ -61,11 +61,13 @@ body {
 
 header {
 	padding:30px;
-	border:1.5px solid black;
+	border-top:1.5px solid black;
+	border-bottom:1.5px solid black;
 	background-color: white;
 	margin-bottom:10px;
 	position: relative;
 }
+
 
 img.kendall {
 	height:100px;
@@ -85,29 +87,35 @@ h1 {
 }
 
 #sidebar {
-	background-color: rgb(137, 197, 206);
+	background-color: white;
 	width:25%;
-	height:78%;
+	height:120%;
 	border: 2px solid rgb(115, 115, 204);
 	float: left;
-	font-family: Times;
-	line-height: 30px;
+	font-family: fontAwesome;
+	line-height: 35px;
 	text-align: center;
-	padding:10px;
+	padding:2em;
 	margin: 15px;
+	display: inline-block;
 }
 
 .content_area {
 	padding: 10 px 30px 50px 70px;
-	border:2px solid navy;
+	border:2px solid rgb(235, 235, 243);
 	margin:15px;
 	float: right;
-
+	display:inline;
+	width:62%;
 }
 
 .week {
 	font-size:1.250em;
 	font-weight: bold;
+}
+#unit {
+	border:1.5px solid rgb(137, 197, 206);
+	margin:2px;
 }
 
 
