changed font weight and update blog template

--- a/unit1_projects/blog_template.css
+++ b/unit1_projects/blog_template.css
@@ -1,46 +1,129 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-	vertical-align:center
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/* My CSS Code*/
+
+
+body {
+	display:inline-block;
 }
 
 .site {
 	width:1020px;
 }
 
-.header {
-	padding:15px;
-	border:1.5px solid black;
-	background-color: rgb(203, 177, 226);
+header {
+	padding:30px;
+	border-top:1.5px solid black;
+	border-bottom:1.5px solid black;
+	background-color: white;
 	margin-bottom:10px;
 	position: relative;
+}
+
+
+img.kendall {
+	height:100px;
+	width:100px;
+	float: left;
+	margin: 1em 1em 0.500em;
+	border-radius:120px;
+	position:absolute;
+	top:-5px;
 }
 
 h1 {
 	text-align: center;
 	float: center;
 	font-family: 'Allura', cursive;
+	font-size:2em;
+}
+
+span {
+	color:green;
 }
 
 #sidebar {
-	background-color: rgb(137, 197, 206);
-	width:200px;
-	height:850px;
+	background-color: white;
+	width:25%;
+	height:82%;
 	border: 2px solid rgb(115, 115, 204);
 	float: left;
-	font-family: sans-serif;
-
+	font-family: fontAwesome;
+	line-height: 35px;
+	text-align: center;
+	padding:2em;
+	margin: 15px;
+	display: inline-block;
 }
 
 .content_area {
 	padding: 10 px 30px 50px 70px;
-	border:2px solid navy;
+	border:2px solid rgb(235, 235, 243);
 	margin:15px;
 	float: right;
-	width:66%;
+	display:inline;
+	width:62%;
+}
+
+.week {
+	font-size:1.250em;
+	font-weight: bold;
+}
+#unit {
+	border:1.5px solid rgb(137, 197, 206);
+	margin:2px;
 }
 
 
-
-.footer {
+footer {
 	background-color: rgb(133, 133, 201);
 	padding:10px;
 	border-top:2px solid black;
@@ -52,6 +135,11 @@ h1 {
 p {
 	text-align: left;
 	font-family: sans-serif;
+	margin:10px;
+}
+
+#center {
+	text-align: center;
 }
 
 
@@ -61,25 +149,22 @@ h2 {
 	font-family: sans-serif;
 }
 
-a:link	{
-	color:black;
-text-decoration:none;
-}
+  a:link	{
+  	color:black;
+	text-decoration:none;
+  }
+  a:visited	{
+  	color: green;
+	text-decoration:none;
+  }
+  a:hover	{
+  	color: navy;
+  }
+  a:active	{
+  	color: green;
+  }
 
-a:visited	{
-	color: green;
-text-decoration:none;
-}
-
-a:hover	{
-	color: navy;
-}
-
-a:active	{
-	color: green;
-}
-
-.images{
+  .images{
     text-align:center;
 }
 
@@ -91,4 +176,12 @@ img.center {
 
 img.logotext {
 	width:30%;
-  }
+	margin:10px;
+  } 
+}
+
+  @media screen and (max-device-width: 480px) {
+  	#sidebar {
+  		float:center;
+  	}
+  } 
