--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	text-align: center;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -104,7 +104,7 @@ span {
 }
 
 .content_area {
-	padding: 10 px 30px 50px 70px;
+	width: 66%;
 	border:2px solid navy;
 	margin:15px;
 	float: right;
@@ -136,6 +136,7 @@ p {
 	text-align: center;
 	font-family: sans-serif;
 	margin:5px;
+	overflow:au;
 }
 
 
