--- a/index.css
+++ b/index.css
@@ -29,6 +29,52 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+head{
+	margin-right:auto;
+	margin-left:auto;
+}
+
+/*div.nav_bar{
+	vertical-align:left;
+	display:left;
+	position: fixed;
+	background-color: white;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 4em;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 1em;
+	z-index: 2;
+    color:black;
+    
+}*/
+
+
+
+img.nav_logo{
+	width: 6em;
+	height: 6em;
+}
+
+
+a.navlink:link {
+		color:#1a1a1a;	
+		display: inline-block;
+		width: 7.25em;
+		background-color: rgb(115, 115, 204);
+		text-align: center;
+		text-decoration: none;
+		float: left;
+		vertical-align: left;
+}
+a.navlink:visited {color:#1a1a1a;}
+
+a.navlink:hover {
+}
+
 body {
 	line-height: 1;
 }
@@ -62,36 +108,43 @@ body {
 
 header {
 	padding:30px;
-	border-top:1.5px solid black;
-	border-bottom:1.5px solid black;
 	background-color: white;
 	margin-bottom:10px;
 	position: relative;
 }
 
-img.kendall {
-	height:100px;
-	width:100px;
-	float: left;
-	margin: 1em 1em 0.500em;
-	border-radius:120px;
-	position:absolute;
-	top:-10px;
-	left:80px;
-}
+
 
 h1 {
 	text-align: center;
 	float: center;
-	font-family: 'Allura', cursive;
+	font-family: 'Courier New';
 	font-size:2em;
+	text-decoration: none;
+}
+#first {
+	font-size: 2.8em;
+	color: rgb(115, 115, 204);
+	text-decoration: none;
 }
 
-span {
-	color:green;
+.title {
+	font-size: 1.8em;
+	font-family: 'Courier New';
+	font-weight: bold;
+	color: rgb(115, 115, 204);
+	text-decoration: none;
 }
 
-#sidebar {
+img.kendall {
+	height:100px;
+	width:100px;
+	margin: 1em 1em 0.500em;
+	border-radius:120px;
+	text-align:below;
+	text-decoration: none;
+}
+/*#sidebar 
 	background-color: white;
 	width:25%;
 	border: 2px solid rgb(115, 115, 204);
@@ -102,7 +155,7 @@ span {
 	padding:10px;
 	margin: 15px;
 	display: inline-block;
-}
+}*/
 
 .content_area {
 	width: 66%;
@@ -117,17 +170,10 @@ span {
 	font-weight: bold;
 }
 
-.unit {
-	border:1.5px solid rgb(137, 197, 206);
-	margin:2px;
-}
 
 
 
 footer {
-	background-color: rgb(133, 133, 201);
-	padding:10px;
-	border-top:2px solid black;
 	border-bottom:4px solid navy;
 	margin:auto;
 	clear:both;
@@ -137,7 +183,7 @@ p {
 	text-align: center;
 	font-family: sans-serif;
 	margin:5px;
-	overflow:au;
+	overflow:auto;
 }
 
 
@@ -147,30 +193,10 @@ h2 {
 	font-family: sans-serif;
 }
 
-  a:link	{
-  	color:black;
-	text-decoration:none;
-  }
-  a:visited	{
-  	color: green;
-	text-decoration:none;
-  }
-  a:hover	{
-  	color: navy;
-  }
-  a:active	{
-  	color: green;
-  }
 
   img {
   	vertical-align: center;
 	width:83%;
-	padding:5px;
+	padding:.5em;
 	display:inline;
   }
-
-@font-face {
-    font-family: fontAwesome;
-    src: url(font/fontawesome-webfont.woff);
-    font-weight:400;
-}
