--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ head{
 .home {
 	display: inline-block;
 	background: url("https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg");
+	background-size: 100%;
 	height:100px;
 	width:100px;
 	margin: 1em 1em 0.500em;
@@ -72,6 +73,7 @@ head{
 .portfolio {
 	display: inline-block;
 	background: url("https://scontent-a-sjc.xx.fbcdn.net/hphotos-xpa1/t31.0-8/1040779_640838153713_1525796151_o.jpg");
+	background-size: 100%;
 	height:100px;
 	width:100px;
 	margin: 1em 1em 0.500em;
@@ -86,6 +88,7 @@ head{
 .bloggety {
 	display: inline-block;
 	background: url("https://scontent-b-sjc.xx.fbcdn.net/hphotos-xfa1/t1.0-9/197276_536963409533_8313280_n.jpg");
+	background-size: 100%;
 	height:100px;
 	width:100px;
 	margin: 1em 1em 0.500em;
@@ -100,6 +103,7 @@ head{
 .about {
 	display: inline-block;
 	background: url("https://scontent-a-sjc.xx.fbcdn.net/hphotos-xap1/t1.0-9/247542_546710426433_5027453_n.jpg");
+	background-size: 100%;
 	height:100px;
 	width:100px;
 	margin: 1em 1em 0.500em;
@@ -114,6 +118,7 @@ head{
 .contact {
 	display: inline-block;
 	background: url("https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/199_505478285973_5557_n.jpg");
+	background-size: 100%;
 	height:100px;
 	width:100px;
 	margin: 1em 1em 0.500em;
@@ -130,7 +135,9 @@ img.nav_logo{
 	width: 6em;
 	height: 6em;
 }
-
+a {
+	text-decoration: none;
+}
 
 a.navlink:link {
 		color:#1a1a1a;	
@@ -204,7 +211,9 @@ h1 {
 }
 
 ul {
+	float: left;
 	vertical-align: left;
+	list-style: none;
 }
 
 img.kendall {
